include `<style>` & optimize inline elements

--- a/tests/sample/input/9999-test.html
+++ b/tests/sample/input/9999-test.html
@@ -2,9 +2,9 @@
 <html>
 <head></head>
 <body>
+<script>console.log('te> <st')</script>
     <script>
-    console.log('te> <st');
-    function () {
+    function test () {
         test; <!-- <a> -->
     }
     </script>
@@ -13,7 +13,7 @@
     <div><table border="1" style="background-color: red;"><tr><td>A cell    test!</td>
 <td colspan="2" rowspan="2"><table border="1" style="background-color: green;"><tr> <td>Cell</td><td colspan="2" rowspan="2"></td></tr><tr>
         <td><input><input><input></td></tr><tr><td>Cell</td><td>Cell</td><td>Ce
-            ll</td></tr></table></td></tr><tr><td>Test <span>Ce       ll</span></td></tr><tr><td>Cell</td><td>Cell</td><td>Cell</td></tr></table></div></div>
+            ll</td></tr></table></td></tr><tr><td>Test <span>Ce       ll</span></td><td>Test <span>Ce ll</span> </td><td>Test <span>Ce </span> ll</td></tr><tr><td>Cell</td><td>Cell</td><td>Cell</td></tr></table></div></div>
     <area>xx</area><wbr><hr><hr/>
 </body>
 </html>
