--- a/tests/sample/output/9999-test.html
+++ b/tests/sample/output/9999-test.html
@@ -2,12 +2,12 @@
 <html>
     <head></head>
     <body>
+        <script>console.log('te> <st')</script>
         <script>
-    console.log('te> <st');
-    function () {
+    function test () {
         test; <!-- <a> -->
     }
-    </script>
+        </script>
         <div>
             <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
             <div>
@@ -37,6 +37,8 @@
                     </tr>
                     <tr>
                         <td>Test <span>Ce ll</span></td>
+                        <td>Test <span>Ce ll</span></td>
+                        <td>Test <span>Ce</span> ll</td>
                     </tr>
                     <tr>
                         <td>Cell</td>
